// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can be presented as one of the allowed variants 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 500;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0 2rem;
  cursor: pointer;
  background: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  min-height: 3.25rem;
  background-color: #4b286d;
  color: #fff;
}

.c0:after {
  content: "";
  min-height: inherit;
  font-size: 0;
}

.c0:hover {
  box-shadow: 0 0 0 1px;
  background-color: #fff;
  color: #4b286d;
}

.c1 {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: auto;
    min-width: 180px;
  }
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;

exports[`Button renders 1`] = `
.c0 {
  border-width: 0;
  border-radius: 4px;
  word-wrap: break-word;
  font-size: 1rem;
  -webkit-letter-spacing: 0px;
  -moz-letter-spacing: 0px;
  -ms-letter-spacing: 0px;
  letter-spacing: 0px;
  line-height: 1.5;
  word-wrap: break-word;
  font-weight: 500;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  margin: 0;
  padding: 0 2rem;
  cursor: pointer;
  background: none;
  -webkit-transition: background 0.2s;
  transition: background 0.2s;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-align: center;
  min-height: 3.25rem;
  background-color: #2B8000;
  color: #fff;
}

.c0:after {
  content: "";
  min-height: inherit;
  font-size: 0;
}

.c0:hover {
  box-shadow: 0 0 0 1px;
  background-color: #fff;
  color: #2B8000;
}

.c1 {
  width: 100%;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-inline-box;
    display: -webkit-inline-flex;
    display: -ms-inline-flexbox;
    display: inline-flex;
    width: auto;
    min-width: 180px;
  }
}

<button
  class="c0"
  type="button"
>
  <span
    class="c1"
  >
    Submit
  </span>
</button>
`;
